update sync openapi spec
